--- a/08-input-validation/ABS_Chap_8.ipynb
+++ b/08-input-validation/ABS_Chap_8.ipynb
@@ -51,8 +51,17 @@
       "source": [
         "# Definitions\n",
         "\n",
-        "No new definitions this chapter"
+        "* __Input validation code__: Code that verfiies user values (e.g., text assigned by `input()`) are formatted correctly. This prevents bugs and security vulnerabiliets."
       ]
+    },
+    {
+      "source": [
+        "# Modules used in this chapter\n",
+        "\n",
+        "* `pyinputplus`"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -60,24 +69,25 @@
         "id": "LrquGmi3FJuG"
       },
       "source": [
-        "# New functions covered in this chapter\r\n",
-        "\r\n",
-        "\r\n",
-        "*   `inputStr()` requires `import pyinputplus`\r\n",
-        "*   `inputNum()` requires `import pyinputplus`\r\n",
-        "*   `inputInt()` requires `import pyinputplus`\r\n",
-        "*   `inputFloat()` requires `import pyinputplus`\r\n",
-        "*   `inputChoice()` requires `import pyinputplus`\r\n",
-        "*   `inputMenu()` requires `import pyinputplus`\r\n",
-        "*   `inputDatetime()` requires `import pyinputplus`\r\n",
-        "*   `inputYesNo()` requires `import pyinputplus`\r\n",
-        "*   `inputBool()` requires `import pyinputplus`\r\n",
-        "*   `inputEmail()` requires `import pyinputplus`\r\n",
-        "*   `inputFilepath()` requires `import pyinputplus`\r\n",
-        "*   `inputPassword()` requires `import pyinputplus`\r\n",
-        "\r\n",
-        "### Try using these functions, then explain what you think these functions are doing. \r\n",
-        "#### Google them to learn more! \r\n",
+        "# New functions covered in this chapter\n",
+        "\n",
+        "\n",
+        "*   `pyinputplus.inputStr()`\n",
+        "*   `pyinputplus.inputNum()`\n",
+        "*   `pyinputplus.inputInt()`\n",
+        "*   `pyinputplus.inputFloat()`\n",
+        "*   `pyinputplus.inputChoice()`\n",
+        "*   `pyinputplus.inputMenu()`\n",
+        "*   `pyinputplus.inputDatetime()`\n",
+        "*   `pyinputplus.inputYesNo()`\n",
+        "*   `pyinputplus.inputBool()`\n",
+        "*   `pyinputplus.inputEmail()`\n",
+        "*   `pyinputplus.inputFilepath()`\n",
+        "*   `pyinputplus.inputPassword()`\n",
+        "*   `pyinputplus.inputCustom()`\n",
+        "\n",
+        "### Try using these functions, then explain what you think these functions are doing. \n",
+        "#### Google them to learn more! \n",
         "(Googling is a very important skill when programming)"
       ]
     },
@@ -91,13 +101,13 @@
         "\n",
         "1. Does PyInputPlus come with the Python Standard Library?\n",
         "\n",
-        "2. Why is PyInputPlus commonly imported with import pyinputplus as pyip?\n",
+        "2. Why is PyInputPlus commonly imported with `import pyinputplus as pyip`?\n",
         "\n",
         "3. What is the difference between `inputInt()` and `inputFloat()`?\n",
         "\n",
         "4. How can you ensure that the user enters a whole number between `0` and `99` using PyInputPlus?\n",
         "\n",
-        "5. What is passed to the allowRegexes and blockRegexes keyword arguments?\n",
+        "5. What is passed to the `allowRegexes` and `blockRegexes` keyword arguments?\n",
         "\n",
         "6. What does `inputStr(limit=3)` do if blank input is entered three times?\n",
         "\n",
@@ -120,7 +130,7 @@
         "id": "au2sQsCJ2F96"
       },
       "source": [
-        "## Sandwich Maker\n",
+        "## *Sandwich Maker*\n",
         "Write a program that asks users for their sandwich preferences. The program should use PyInputPlus to ensure that they enter valid input, such as:\n",
         "\n",
         "* Using `inputMenu()` for a bread type: wheat, white, or sourdough.\n",
@@ -141,13 +151,14 @@
       },
       "source": [
         "\n",
-        "## Write Your Own Multiplication Quiz\n",
+        "## *Write Your Own Multiplication Quiz*\n",
         "To see how much PyInputPlus is doing for you, try re-creating the multiplication quiz project on your own without importing it. This program will prompt the user with 10 multiplication questions, ranging from 0 × 0 to 9 × 9. You’ll need to implement the following features:\n",
         "\n",
-        "If the user enters the correct answer, the program displays “Correct!” for 1 second and moves on to the next question.\n",
-        "The user gets three tries to enter the correct answer before the program moves on to the next question.\n",
-        "Eight seconds after first displaying the question, the question is marked as incorrect even if the user enters the correct answer after the 8-second limit.\n",
-        "Compare your code to the code using PyInputPlus in “Project: Multiplication Quiz” on page 196.\n"
+        "* If the user enters the correct answer, the program displays “Correct!” for 1 second and moves on to the next question.\n",
+        "* The user gets three tries to enter the correct answer before the program moves on to the next question.\n",
+        "* Eight seconds after first displaying the question, the question is marked as incorrect even if the user enters the correct answer after the 8-second limit.\n",
+        "\n",
+        "Compare your code to the code using PyInputPlus in “Project: Multiplication Quiz” in Chapter 8.\n"
       ]
     }
   ]
