--- a/09-reading-and-writing-files/ABS_Chap_9.ipynb
+++ b/09-reading-and-writing-files/ABS_Chap_9.ipynb
@@ -47,17 +47,17 @@
       "source": [
         "# Definitions\n",
         "\n",
-        "* Path: Specifies the location of a file on the computer. File path is determined on Windows by a drive, parent, and name of file. On Mac and Linux, file path is determined by an anchor, parent, and name of the file. See Figure 9-4 for more on file path. See Figure 9-5 for directory path.\n",
+        "* __Path__: Specifies the location of a file on the computer. File path is determined on Windows by a drive, parent, and name of file. On Mac and Linux, file path is determined by an anchor, parent, and name of the file. See Figure 9-4 for more on file path. See Figure 9-5 for directory path.\n",
         "\n",
-        "* Plaintext files: Contain only basic text characters and do not include font, size, or color information. Text files with the `.txt` extension or Python script files with the `.py` extension are examples of plaintext files.\n",
+        "* __Plaintext files__: Contain only basic text characters and do not include font, size, or color information. Text files with the `.txt` extension or Python script files with the `.py` extension are examples of plaintext files.\n",
         "\n",
-        "* Binary files: All other types of files. \n",
+        "* __Binary files__: All other types of files. \n",
         "\n",
-        "* Read mode: Files opened in read mode cannot be edited.\n",
+        "* __Read mode__: Files opened in read mode cannot be edited.\n",
         "\n",
-        "* Write plaintext: Content can be written to file.\n",
+        "* __Write plaintext__: Content can be written to file.\n",
         "\n",
-        "* Append plaintext mode: Content can be added to file."
+        "* __Append plaintext mode__: Content can be added to file."
       ]
     },
     {
@@ -182,7 +182,7 @@
         "id": "ta_6XRwosfrb"
       },
       "source": [
-        "## Extending the Multi-Clipboard\r\n",
+        "## *Extending the Multi-Clipboard*\n",
         "Extend the multi-clipboard program in this chapter so that it has a `delete <keyword>` command line argument that will delete a keyword from the shelf. Then add a `delete` command line argument that will delete *all* keywords."
       ]
     },
@@ -192,34 +192,39 @@
         "id": "X9B_Au4at-31"
       },
       "source": [
-        "## Mad Libs\r\n",
-        "Create a Mad Libs program that reads in text files and lets the user add their own text anywhere the word *ADJECTIVE*, *NOUN*, *ADVERB*, or *VERB* appears in the text file. For example, a text file may look like this:\r\n",
-        "___\r\n",
-        "> The ADJECTIVE panda walked to the NOUN and then VERB. A nearby NOUN was\r\n",
-        "unaffected by these events.\r\n",
-        "___\r\n",
-        "The program would find these occurrences and prompt the user to replace them.\r\n",
-        "___\r\n",
-        ">Enter an adjective:\r\n",
-        ">\r\n",
-        ">**silly**\r\n",
-        ">\r\n",
-        ">Enter a noun:\r\n",
-        ">\r\n",
-        ">**chandelier**\r\n",
-        ">\r\n",
-        ">Enter a verb:\r\n",
-        ">\r\n",
-        ">**screamed**\r\n",
-        ">\r\n",
-        ">Enter a noun:\r\n",
-        ">\r\n",
-        ">**pickup truck**\r\n",
-        "___\r\n",
-        "The following text file would then be created:\r\n",
-        "___\r\n",
-        ">The silly panda walked to the chandelier and then screamed. A nearby pickup truck was unaffected by these events.\r\n",
-        "___\r\n",
+        "## *Mad Libs*\n",
+        "Create a Mad Libs program that reads in text files and lets the user add their own text anywhere the word *ADJECTIVE*, *NOUN*, *ADVERB*, or *VERB* appears in the text file. For example, a text file may look like this:\n",
+        "\n",
+        "> The ADJECTIVE panda walked to the NOUN and then VERB. A nearby NOUN was\n",
+        "unaffected by these events.\n",
+        "\n",
+        "\n",
+        "The program would find these occurrences and prompt the user to replace them.\n",
+        "\n",
+        "\n",
+        ">Enter an adjective:\n",
+        ">\n",
+        ">**silly**\n",
+        ">\n",
+        ">Enter a noun:\n",
+        ">\n",
+        ">**chandelier**\n",
+        ">\n",
+        ">Enter a verb:\n",
+        ">\n",
+        ">**screamed**\n",
+        ">\n",
+        ">Enter a noun:\n",
+        ">\n",
+        ">**pickup truck**\n",
+        "\n",
+        "\n",
+        "The following text file would then be created:\n",
+        "\n",
+        "\n",
+        ">The silly panda walked to the chandelier and then screamed. A nearby pickup truck was unaffected by these events.\n",
+        "\n",
+        "\n",
         "The results should be printed to the screen and saved to a new text file."
       ]
     },
@@ -229,8 +234,8 @@
         "id": "VqSLjSJ1Rc79"
       },
       "source": [
-        "## Regex Search\r\n",
-        "\r\n",
+        "## *Regex Search*\n",
+        "\n",
         "Write a program that opens all `.txt` files in a folder and searches for any line that matches a user-supplied regular expression. The results should be printed to the screen."
       ]
     }
