--- a/10-organizing-files/ABS_Chap_10.ipynb
+++ b/10-organizing-files/ABS_Chap_10.ipynb
@@ -56,6 +56,17 @@
       ]
     },
     {
+      "source": [
+        "# Modules used in this chapter\n",
+        "\n",
+        "* `shutil`\n",
+        "* `os`\n",
+        "* `zipfile`"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "5HCCPzWV4Ofx"
@@ -64,15 +75,15 @@
         "# New functions covered in this chapter\n",
         "\n",
         "\n",
-        "*   `shutil.copy()` requires `import shutil`\n",
-        "*   `shutil.copytree()` requires `import shutil`\n",
-        "*   `shutil.move()` requires `import shutil`\n",
-        "*   `shutil.rmtree()` requires `import shutil`\n",
-        "*   `send2trash.send2trash()` requires `import send2trash`\n",
-        "*   `os.walk()` requires `import os`\n",
-        "*   `zipfile.ZipFile()` requires `import zipfile`\n",
-        "*   `.namelist()` requires `import zipfile`\n",
-        "*   `.extractall()` requires `import zipfile`\n",
+        "*   `shutil.copy()`\n",
+        "*   `shutil.copytree()`\n",
+        "*   `shutil.move()`\n",
+        "*   `shutil.rmtree()`\n",
+        "*   `send2trash.send2trash()`\n",
+        "*   `os.walk()`\n",
+        "*   `zipfile.ZipFile()`\n",
+        "*   `zipfile.namelist()`\n",
+        "*   `zipfile.extractall()`\n",
         "\n",
         "\n",
         "### Try using these functions, then explain what you think these functions are doing. \n",
@@ -113,9 +124,9 @@
         "id": "FviqDxoF7ZOM"
       },
       "source": [
-        "## Selective Copy\n",
+        "## *Selective Copy*\n",
         "\n",
-        "Write a program that walks through a folder tree and searches for files with a certain file extension (such as .pdf or .jpg). Copy these files from whatever location they are in to a new folder.\n",
+        "Write a program that walks through a folder tree and searches for files with a certain file extension (such as *.pdf* or *.jpg*). Copy these files from whatever location they are in to a new folder.\n",
         "\n"
       ]
     },
@@ -125,10 +136,10 @@
         "id": "lllWtCU_7fOA"
       },
       "source": [
-        "## Deleting Unneeded Files\n",
+        "## *Deleting Unneeded Files*\n",
         "It’s not uncommon for a few unneeded but humongous files or folders to take up the bulk of the space on your hard drive. If you’re trying to free up room on your computer, you’ll get the most bang for your buck by deleting the most massive of the unwanted files. But first you have to find them.\n",
         "\n",
-        "Write a program that walks through a folder tree and searches for exceptionally large files or folders—say, ones that have a file size of more than 100MB. (Remember that to get a file’s size, you can use `os.path.getsize()` from the os module.) Print these files with their absolute path to the screen."
+        "Write a program that walks through a folder tree and searches for exceptionally large files or folders—say, ones that have a file size of more than 100MB. (Remember that to get a file’s size, you can use `os.path.getsize()` from the `os` module.) Print these files with their absolute path to the screen."
       ]
     },
     {
@@ -137,9 +148,9 @@
         "id": "wHuG40W77j-i"
       },
       "source": [
-        "## Filling in the Gaps\n",
+        "## *Filling in the Gaps*\n",
         "\n",
-        "Write a program that finds all files with a given prefix, such as `spam001.txt`, `spam002.txt`, and so on, in a single folder and locates any gaps in the numbering (such as if there is a `spam001.txt` and `spam003.txt` but no `spam002.txt`). Have the program rename all the later files to close this gap.\n",
+        "Write a program that finds all files with a given prefix, such as *spam001.txt*, *spam002.txt*, and so on, in a single folder and locates any gaps in the numbering (such as if there is a *spam001.txt* and *spam003.txt* but no *spam002.txt*). Have the program rename all the later files to close this gap.\n",
         "\n",
         "As an added challenge, write another program that can insert gaps into numbered files so that a new file can be added"
       ]
